# minNotes

./: .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  PLAN-data-types.md  PLAN-document-annotations.md  PLAN-document-management.md  PLAN-video-annotations.md  README.md  SPIKE.md  STATUS.md  justfile
LICENSES/: FFmpeg-LICENSE.txt  KSyntaxHighlighting-MIT.txt  Sparkle-MIT.txt  THIRD_PARTY_NOTICES.txt  WinSparkle-MIT.txt
app/: AppUpdater.h  CMakeLists.txt  MinNotesApplication.cpp  MinNotesApplication.h  main.cpp  sparkle_updater_macos.h  sparkle_updater_macos.mm  winsparkle_updater_windows.cpp
app/core/: BlockModel.cpp  BlockModel.h  Clipboard.cpp  Clipboard.h  CodeHighlighter.cpp  CodeHighlighter.h  CodeSyntax.cpp  CodeSyntax.h  Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  Exporter.cpp  Exporter.h  InlineMarkdownHighlighter.cpp  InlineMarkdownHighlighter.h  MediaStore.cpp  MediaStore.h  PathMap.cpp  PathMap.h  PathMapController.cpp  PathMapController.h  PdfPageProvider.h  TableGrid.cpp  TableGrid.h  VideoFrameProvider.h
app/notes/: DocInkCanvas.cpp  DocInkCanvas.h  SketchCanvas.cpp  SketchCanvas.h  VideoAnnotator.cpp  VideoAnnotator.h  VideoNotesModel.cpp  VideoNotesModel.h  active_stroke.h  annotation_io.cpp  annotation_io.h  annotation_note.cpp  annotation_note.h  annotation_serializer.cpp  annotation_serializer.h  annotation_thumbnail.cpp  annotation_thumbnail.h  doc_ink.cpp  doc_ink.h  ink_stroke_modeler_wrapper.cpp  ink_stroke_modeler_wrapper.h  viewport_annotator.cpp  viewport_annotator.h
app/player/: VideoSurfaceItem.cpp  VideoSurfaceItem.h  audio_chunk_reader.cpp  audio_chunk_reader.h  audio_decoder.cpp  audio_decoder.h  audio_player.cpp  audio_player.h  audio_ring_buffer.h  audio_routing.h  audio_routing_matrix.h  audio_sync_servo.h  coreaudio_device.h  coreaudio_device.mm  decoder_cleanup_queue.cpp  decoder_cleanup_queue.h  fractional_resampler.h  frame_handle.h  frame_handle.mm  frame_handle_nonapple.cpp  frame_index.cpp  frame_index.h  i_audio_source.h  multi_stream_audio_decoder.cpp  multi_stream_audio_decoder.h  scrub_decoder.cpp  scrub_decoder.h  scrub_frame_cache.cpp  scrub_frame_cache.h  shuttle_audio_engine.cpp  shuttle_audio_engine.h  simple_lru.h  tempo_stage.cpp  tempo_stage.h  timecode_formatter.cpp  timecode_formatter.h  video_decoder.cpp  video_decoder.h  vulkan_hw_device_ctx.cpp  vulkan_hw_device_ctx.h  (+4 more)
app/player/d3d11/: d3d11_device_manager.cpp  d3d11_device_manager.h  d3d11_vulkan_decode_bridge.cpp  d3d11_vulkan_decode_bridge.h  d3d11_vulkan_yuv_compositor.cpp  d3d11_vulkan_yuv_compositor.h
app/player/shaders/: fullscreen.vert  passthrough.frag  yuv_to_rgb_ayuv.frag  yuv_to_rgb_biplanar.frag
app/player/vulkan/: vulkan_device_manager.cpp  vulkan_device_manager.h
app/qml/MinNotes/App/: BlockKanban.qml  BlockTable.qml  BottomRail.qml  ChoiceColumnEditor.qml  ChoicePicker.qml  ColorPickerInline.qml  Editor.qml  FlatButton.qml  FlatSlider.qml  FlatToolTip.qml  Icon.qml  Inspector.qml  LeftRail.qml  Main.qml  MediaBlock.qml  MnScrollBar.qml  PathMappingsDialog.qml  PhosphorIcons.js  RightRail.qml  TableTabs.qml  Theme.qml  ThemedMenu.qml  ThemedMenuSeparator.qml  Toasts.qml  VideoTransport.qml
docs/: CNAME  _config.yml  appcast-win.xml  appcast.xml  editing.md  index.md  shortcuts.md
docs/_includes/: head_custom.html
docs/_sass/color_schemes/: dark.scss
docs/_sass/custom/: custom.scss
packaging/macos/: Info.plist.in  README.md  entitlements.plist
packaging/windows/: PORTING-NOTES.md  build-icon.ps1  build-release.ps1  minNotes.iss  minNotes.rc  minNotes.rc.in
packaging/windows/icontool/: CMakeLists.txt  main.cpp
scripts/: RELEASE.md  bundle_dylibs.sh  fetch_sparkle.sh  sign-and-notarize.sh  update_appcast.sh  update_appcast_win.sh
spike/: BlockModel.cpp  BlockModel.h  CMakeLists.txt  FenwickTree.h  main.cpp
spike/qml/: ArmEditor.qml  ArmFlickable.qml  ArmListView.qml  BlockDelegate.qml  Hud.qml  Main.qml
tests/: CMakeLists.txt  regression_test.cpp
